services word copy edit

--- a/services.html
+++ b/services.html
@@ -1023,7 +1023,7 @@ window.addEventListener("resize", () => {
     <div class="design-left">
       <div class="inline-heading">
   
-     <p class="wipe-copy">Design is how your product communicates trust through clarity, consistency, and details that feel intentional.
+     <p class="wipe-copy">Build instant credibility with clear, consistent design that makes your brand feel intentional and trustworthy.
       </p>
 </div>
       <!-- ✅ DESIGN BOX (drop-in replacement for an <img>) -->
@@ -1123,7 +1123,7 @@ window.addEventListener("resize", () => {
     <div class="design-left">
       <div class="inline-heading">
       
-           <p class="wipe-copy">Clean, scalable builds that load fast, feel premium, and stay easy to maintain.
+           <p class="wipe-copy">Deliver high-performance builds that load fast, stay dependable, and support long-term growth.
         </p>
         </div>
       <!-- ✅ DEVELOPMENT BOX (drop-in replacement for an <img>) -->
